force-app/main/default/objects/Brand_Experience_Variation_Member__c/Brand_Experience_Variation_Member__c.object-meta.xml
<CustomObject>
    <label>Event &amp; Experience Activation Member</label>
    <nameField>
        <label>Experience Activation Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event &amp; Experience Activation Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>