force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/Assigned_CA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Experience_Variation_Members</relationshipName>
    <type>Lookup</type>
</CustomField>