force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/Brand_Experience_Variation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience_Variation__c</fullName>
    <description>Experience Variation Identifier</description>
    <label>Activation</label>
    <referenceTo>Brand_Experience_Variation__c</referenceTo>
    <relationshipLabel>Event &amp; Experience Activation Members</relationshipLabel>
    <relationshipName>Brand_Experience_Variation_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>