force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Client Identifier</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Brand_Experience_Variation_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>