force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/ClubMember__c.field-meta.xml
<CustomField>
    <fullName>ClubMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Member</label>
    <referenceTo>Club_MemberShip__c</referenceTo>
    <relationshipName>Brand_Experience_Variation_Members</relationshipName>
    <type>Lookup</type>
</CustomField>