force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/GuestNumber__c.field-meta.xml
<CustomField>
    <fullName>GuestNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>