force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/IsSelected__c.field-meta.xml
<CustomField>
    <fullName>IsSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client is selected to participate to the Experience</description>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>