force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/NominationSource__c.field-meta.xml
<CustomField>
    <fullName>NominationSource__c</fullName>
    <label>Nomination Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client_target</fullName>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>LV#54</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>