force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/NominationStatus__c.field-meta.xml
<CustomField>
    <fullName>NominationStatus__c</fullName>
    <label>Nomination Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>