force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/Notification_Request__c.field-meta.xml
<CustomField>
    <fullName>Notification_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Request</label>
    <type>Checkbox</type>
</CustomField>