force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/ParticipationEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ParticipationEndDateTime__c</fullName>
    <inlineHelpText>Can be edited when the status of Experience Variation is &quot;Participation Opened&quot; or &quot;Ended&quot;</inlineHelpText>
    <label>Participation End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>