force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/ParticipationStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ParticipationStartDateTime__c</fullName>
    <inlineHelpText>Can be edited when the status of Experience Variation is &quot;Participation Opened&quot;</inlineHelpText>
    <label>Participation Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>