force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>TextArea</type>
</CustomField>