force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/rsvpDateTime__c.field-meta.xml
<CustomField>
    <fullName>rsvpDateTime__c</fullName>
    <description>Client invitation response Date &amp; Time (GMT+02)</description>
    <inlineHelpText>Can be edited when the status of Experience Variation is &quot;Registration Opened&quot;</inlineHelpText>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>