force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/rsvpState__c.field-meta.xml
<CustomField>
    <fullName>rsvpState__c</fullName>
    <description>Client invitation response</description>
    <inlineHelpText>Can be edited when the status of Experience Variation is &quot;Registration Opened&quot;</inlineHelpText>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Registered</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>