force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of an Experience Member</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
            <value>
                <fullName>To Contact</fullName>
            </value>
            <value>
                <fullName>Removed Manually</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Not Participated</fullName>
            </value>
            <value>
                <fullName>Participated</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Not Selected</fullName>
                <isActive>false</isActive>
                <label>Not Selected</label>
            </value>
            <value>
                <fullName>Selected</fullName>
                <isActive>false</isActive>
                <label>Selected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>