force-app/main/default/objects/Brand_Experience_Variation_Member__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>UniqueKey</description>
    <label>UniqueKey</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>