force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/Member_Nomination_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_Nomination_Process</fullName>
    <active>true</active>
    <description>This Validation check if only a manager are able to approve client</description>
    <errorConditionFormula>NOT($User.BypassVR__c )
&amp;&amp;(
ISNEW()
||
ISCHANGED(NominationStatus__c)
)
&amp;&amp;
(
ISPICKVAL(NominationStatus__c, &apos;Approved&apos;)
||
ISPICKVAL(NominationStatus__c, &apos;Refused&apos;)
)
&amp;&amp;
$Profile.Name &lt;&gt; &quot;ICON_SA Manager&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;ICON_SAManager_EVERYWHERE&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;ICON_Corporate&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Admin_Corporate&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;LV_Club&quot;</errorConditionFormula>
    <errorDisplayField>NominationStatus__c</errorDisplayField>
    <errorMessage>Only manager can approve or reject client when client Not registered</errorMessage>
</ValidationRule>