force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/Nomination_Process_Registred_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Nomination_Process_Registred_Client</fullName>
    <active>true</active>
    <description>Nomination process cannot be done on Registered client</description>
    <errorConditionFormula>NOT($User.BypassVR__c )
&amp;&amp;
ISCHANGED(NominationStatus__c)
&amp;&amp;
(
ISPICKVAL(rsvpState__c, &apos;Registered&apos;)
||
ISPICKVAL(rsvpState__c, &apos;Declined&apos;)
)
&amp;&amp;
$Profile.Name = &quot;ICON_SA Manager&quot;
&amp;&amp;
$Profile.Name = &quot;ICON_SAManager_EVERYWHERE&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Admin_Corporate&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;LV_Club&quot;</errorConditionFormula>
    <errorDisplayField>NominationStatus__c</errorDisplayField>
    <errorMessage>Nomination process cannot be done on Registered client</errorMessage>
</ValidationRule>