force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/ParticipationRegistrationNotOpened.validationRule-meta.xml
<ValidationRule>
    <fullName>ParticipationRegistrationNotOpened</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISPICKVAL(Brand_Experience_Variation__r.Status__c, &apos;Participation Opened&apos;))
&amp;&amp;
NOT(ISPICKVAL(Brand_Experience_Variation__r.Status__c, &apos;Ended&apos;))
&amp;&amp;
ISCHANGED(Attendance__c)
&amp;&amp;
NOT ISPICKVAL(Attendance__c, &apos;&apos;)
&amp;&amp;
NOT ISPICKVAL(Attendance__c, &apos;None&apos;)</errorConditionFormula>
    <errorMessage>Participation registration has not opened</errorMessage>
</ValidationRule>