force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/ParticipatRegistrationNotOpenedForClient.validationRule-meta.xml
<ValidationRule>
    <fullName>ParticipatRegistrationNotOpenedForClient</fullName>
    <active>true</active>
    <errorConditionFormula>IsSelected__c  = False
 
	&amp;&amp; (
					
 ISCHANGED(ParticipationStartDateTime__c ) ||
 ISCHANGED( ParticipationEndDateTime__c ) ||
( ISCHANGED(Attendance__c)&amp;&amp; NOT( ISPICKVAL(Attendance__c, &apos;&apos;))
))</errorConditionFormula>
    <errorMessage>Participation registration is not possible for the Client</errorMessage>
</ValidationRule>