force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/Registration_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Process</fullName>
    <active>true</active>
    <description>Nomination process cannot be done on Registered client</description>
    <errorConditionFormula>NOT($User.BypassVR__c )
&amp;&amp;
ISCHANGED(rsvpState__c)
&amp;&amp;	
(
				ISPICKVAL(rsvpState__c, &apos;Registered&apos;)
	   ||
				ISPICKVAL(rsvpState__c, &apos;Declined&apos;)
)
&amp;&amp;
!ISPICKVAL(rsvpState__c, &apos;&apos;)

&amp;&amp;
!ISPICKVAL(NominationStatus__c, &apos;Approved&apos;)</errorConditionFormula>
    <errorDisplayField>NominationStatus__c</errorDisplayField>
    <errorMessage>Registration process cannot be done on unapproved client</errorMessage>
</ValidationRule>