force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/RegistrationNotOpenedForClient.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationNotOpenedForClient</fullName>
    <active>false</active>
    <errorConditionFormula>NOT ISPICKVAL(Status__c, &apos;Not Registered&apos;) &amp;&amp;
 (
					ISPICKVAL(rsvpState__c, &apos;Registered&apos;)
||
ISPICKVAL(rsvpState__c, &apos;Declined&apos;)
 ||
  NOT ISBLANK(rsvpDateTime__c)
					)</errorConditionFormula>
    <errorMessage>Registration not opened for Client</errorMessage>
</ValidationRule>