force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/RegistrationNotOpenedWhenLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationNotOpenedWhenLimit</fullName>
    <active>true</active>
    <description>Registration not opened when the registration Date limits is True</description>
    <errorConditionFormula>ISPICKVAL(Brand_Experience_Variation__r.RequiredClientRegistration__c , &apos;Mandatory&apos;)
 &amp;&amp; 
Brand_Experience_Variation__r.ClientRegistrationDateLimit__c
 &amp;&amp; 
NOT(ISPICKVAL(Brand_Experience_Variation__r.Status__c, &apos;Registration Opened&apos;))
&amp;&amp;
ISCHANGED(rsvpState__c)
&amp;&amp;
((
ISPICKVAL(rsvpState__c, &apos;Registered&apos;)
||
ISPICKVAL(rsvpState__c, &apos;Declined&apos;)
) 
||
(NOT ISBLANK(rsvpDateTime__c) &amp;&amp; ISCHANGED(rsvpDateTime__c)))</errorConditionFormula>
    <errorMessage>Registration not opened</errorMessage>
</ValidationRule>