force-app/main/default/objects/Brand_Experience_Variation_Member__c/validationRules/RegistrationNotOpenedWhenNoLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationNotOpenedWhenNoLimit</fullName>
    <active>true</active>
    <description>Registration not opened when the ClientRegistrationDate has no limit</description>
    <errorConditionFormula>ISPICKVAL(Brand_Experience_Variation__r.RequiredClientRegistration__c , &apos;Mandatory&apos;)
 &amp;&amp; 
NOT(Brand_Experience_Variation__r.ClientRegistrationDateLimit__c) 
 &amp;&amp; 
(ISPICKVAL(Brand_Experience_Variation__r.Status__c, &apos;Draft&apos;)
|| 
ISPICKVAL(Brand_Experience_Variation__r.Status__c, &apos;Ended&apos;)
)
&amp;&amp;
ISCHANGED(rsvpState__c)
&amp;&amp;
((
ISPICKVAL(rsvpState__c, &apos;Registered&apos;)
||
ISPICKVAL(rsvpState__c, &apos;Declined&apos;)
) 
||
(NOT ISBLANK(rsvpDateTime__c) &amp;&amp; ISCHANGED(rsvpDateTime__c)))</errorConditionFormula>
    <errorMessage>Registration cannot modified when Experience or Event is Draft or Ended</errorMessage>
</ValidationRule>